tests/expectations/compiler/function/undefined_vector_element_type_fail.out
Error [ETYC0372180]: Vector types can only be used in storage declarations.
    --> compiler-test:3:12
     |
   3 |     fn foo(a: [Nonexistent]) -> bool {
     |            ^^^^^^^^^^^^^^^^
